--- a/presentation/styles.css
+++ b/presentation/styles.css
@@ -531,7 +531,8 @@ table tbody tr {
 
 .sara-yusef button,
 .imbalanced-data button,
-.interactive-dataset button {
+.interactive-dataset button,
+.explainability-section button {
     margin: 2rem 1rem 0 1rem;
     padding: 0.4rem 1.3rem;
     font-size: 1.3rem;
@@ -546,6 +547,168 @@ table tbody tr {
 
 .sara-yusef button:hover,
 .imbalanced-data button:hover,
-.interactive-dataset button:hover {
+.interactive-dataset button:hover,
+.explainability-section button:hover {
     background-color: #970000;
+}
+
+.explainability-section button {
+    margin: 0 1rem;
+}
+
+.classification-report h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #ff1c1c;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
+.classification-report {
+    padding: 3rem 2rem;
+    margin: -2rem auto 0 auto;
+    background: black;
+    color: #ddd;
+    border: none;
+    max-width: 1000px;
+    box-shadow: none;
+}
+
+.classification-report p {
+    line-height: 1.5;
+    text-align: center;
+}
+
+.report-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 1.5rem 0;
+}
+
+.class-report {
+    width: 40%;
+    margin: 1rem auto;
+    background: #222;
+    color: #ddd;
+    border: 1px solid #333;
+    border-radius: 10px;
+    max-width: 1000px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
+    position: relative;
+    padding: 1rem 2rem;
+}
+
+.overall-metrics {
+    margin: 1rem;
+}
+
+.overall-metrics h3 {
+    font-family: 'Teko', sans-serif;
+    font-size: 1.5rem;
+    color: #eee;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.class-report h3 {
+    font-family: 'Teko', sans-serif;
+    font-size: 1.5rem;
+    color: #eee;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.metric {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0.5rem 0;
+}
+
+.metric span {
+    color: #eee;
+    flex: 0.7;
+    text-align: left;
+    font-size: 1.3rem;
+}
+
+.progress-bar {
+    flex: 2;
+    height: 1rem;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    margin-left: 1rem;
+}
+
+.progress-bar::before {
+    content: '';
+    display: block;
+    height: 100%;
+    width: var(--value);
+    background-color: #ff4d4d;
+    transition: width 0.5s ease-in-out;
+}
+
+.explainability-section h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #ff1c1c;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.tabs {
+    display: flex;
+    justify-content: center;
+    margin: 1.5rem 0;
+}
+
+.tab-button {
+    background-color: #f3f3f3;
+    color: #333;
+    border: none;
+    padding: 0.5rem 1.5rem;
+    margin: 0 0.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.tab-button.active {
+    background-color: #970000;
+    color: #fff;
+}
+
+.tab-content {
+    display: none;
+    text-align: center;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.tab-content img {
+    max-width: 50%;
+    align-items: center;
+}
+
+
+.explainability-section{
+    padding: 3rem 2rem;
+    margin: 1rem auto;
+    background: #222;
+    color: #ddd;
+    border: 1px solid #333;
+    border-radius: 10px;
+    max-width: 1000px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
+    position: relative;
+    overflow: hidden;
 }
